update from dev

--- a/css/dongluc.css
+++ b/css/dongluc.css
@@ -410,7 +410,7 @@ box-shadow: 0 3px 5px 0 rgba(0,0,0,0.2);
 .img_product{display:block;text-align:center;padding:10%;position:relative}
 .img_product img{max-width:100% !important;}
 .price_item{background:rgba(0,0,0,0.5);padding:5px 15px;position:absolute;bottom:0;color:#fff;font-size:15px;white-space:nowrap;display:inline-block;left:20%;right:20%}
-.box_product{border:1px solid #eee;box-sizing:border-box;min-height: 280px;}
+.box_product{box-sizing:border-box;}
 .box_product:hover{border:1px solid #ff6769}
 .box_product:hover  .price_product{border-top:1px solid #ff6769}
 .box_product:hover  .price_item{background:#ff6769}
